Listes - ajout de styles pour les listes numérotées

--- a/public/index.html
+++ b/public/index.html
@@ -400,22 +400,31 @@
 
             <!-- liste -->
             <h2 id="liste">Liste</h2>
-            <qc-doc-exemple caption="Exemple de liste simple">
-            <p>Lorem ipsum dolor sit amet
-                <ul>
+            <qc-doc-exemple caption="Exemple de listes">
+
+                    <ul>
+                        <li>Élément de liste 1</li>
+                        <li>Élément de liste 2</li>
+                        <li>Élément de liste 3
+                            <ul>
+                                <li>Élément de liste 3.1</li>
+                                <li>Élément de liste 3.2</li>
+                            </ul>
+                        </li>
+                        <li>Élément de liste 4</li>
+                    </ul>
+                <ol>
                     <li>Élément de liste 1</li>
                     <li>Élément de liste 2</li>
                     <li>Élément de liste 3
-                        <ul>
+                        <ol>
                             <li>Élément de liste 3.1</li>
                             <li>Élément de liste 3.2</li>
-                        </ul>
+                        </ol>
                     </li>
                     <li>Élément de liste 4</li>
-                </ul>
-            </p>
-
-            <p>Lorem ipsum dolor sit amet</p>
+                </ol>
+                <p>Lorem ipsum dolor sit amet</p>
             </qc-doc-exemple>
 
             <qc-doc-exemple caption="Exemple de liste simple de définition">
