--- a/public/index.html
+++ b/public/index.html
@@ -1407,57 +1407,53 @@
                 </table>
             </div>
 
+            <hr />
+
             <!-- Boutons radio -->
-            <qc-doc-exemple caption="Exemple de boutons radio">
-                <form action="/">
-                    <qc-radio-group legend="Faites un choix : " radio-name="foo" radio-size="md">
-                        <qc-radio-button
-                            radio-name="foo"
-                            radio-label="option 1"
+            <h2 id="RadioButtonMd">Boutons radio de taille moyenne</h2>
+            <h3>Exemples</h3>
+
+            <qc-doc-exemple caption="Exemple de boutons radio de taille moyenne">
+                <qc-radio-group legend="Choisissez une option : " radio-name="ex-md" radio-size="md">
+                    <qc-radio-button
+                        radio-name="ex-md"
+                        radio-label="Option 1"
+                        radio-value="1"
+                    ></qc-radio-button>
+                    <qc-radio-button
+                        radio-name="ex-md"
+                        radio-label="Option 2"
+                        radio-value="2"
+                    ></qc-radio-button>
+                    <qc-radio-button
+                        radio-name="ex-md"
+                        radio-label="Option 3 (désactivée)"
+                        radio-value="3"
+                        radio-disabled
+                    ></qc-radio-button>
+                </qc-radio-group>
+            </qc-doc-exemple>
+
+            <qc-doc-exemple caption="Exemple de boutons radio de petite taille">
+                <qc-radio-group legend="Choisissez une option : " radio-name="ex-sm" radio-size="sm">
+                    <qc-radio-button
+                            radio-name="ex-sm"
+                            radio-label="Option 1"
                             radio-value="1"
-                            radio-size="sm"
-                        ></qc-radio-button>
-                        <qc-radio-button
-                            radio-name="foo"
-                            radio-label="option 2"
+                    ></qc-radio-button>
+                    <qc-radio-button
+                            radio-name="ex-sm"
+                            radio-label="Option 2"
                             radio-value="2"
-                        ></qc-radio-button>
-                        <qc-radio-button
-                            radio-name="foo"
-                            radio-label="option 3 (désactivé)"
+                    ></qc-radio-button>
+                    <qc-radio-button
+                            radio-name="ex-sm"
+                            radio-label="Option 3 (désactivée)"
                             radio-value="3"
                             radio-disabled
-                        ></qc-radio-button>
-                    </qc-radio-group>
-
-                    <button>Soumettre</button>
-                </form>
-
-                <form action="/">
-                    <qc-radio-group legend="Faites un choix : " radio-name="bar" radio-size="md">
-                        <qc-radio-button
-                                radio-name="bar"
-                                radio-label="option 1"
-                                radio-value="1"
-                                radio-size="sm"
-                                radio-required
-                        ></qc-radio-button>
-                        <qc-radio-button
-                                radio-name="bar"
-                                radio-label="option 2"
-                                radio-value="2"
-                                radio-required
-                        ></qc-radio-button>
-                        <qc-radio-button
-                                radio-name="bar"
-                                radio-label="option 3"
-                                radio-value="3"
-                        ></qc-radio-button>
-                    </qc-radio-group>
-
-                    <button>Soumettre</button>
-                </form>
-
+                    ></qc-radio-button>
+                </qc-radio-group>
+            </qc-doc-exemple>
         </div>
     </main>
     <footer>
