Preuve de concept pour un composant outer et un ou plusieurs inner, avec attribut partagé - version light dom

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
 
         <qc-doc-exemple caption="Exemple d’affichage d'un composant web séparé (qc-test, wrapper de Test.svelte) et d'un composant web partagé (qc-other-test, qui importe Test.svelte)"
         >
-            <qc-outer shared="shared">
-                <qc-inner foo="foo1"></qc-inner>
-                <qc-inner foo="foo2"></qc-inner>
+            <qc-outer name="foobar" legend="Faites un choix">
+                <qc-inner value="1" label="Un"></qc-inner>
+                <qc-inner value="2" label="Deux"></qc-inner>
             </qc-outer>
 
 <!--            <qc-wrapper></qc-wrapper>-->
