Modification du CSS pour erreurs pour permettre une validation par JavaScript

--- a/public/index.html
+++ b/public/index.html
@@ -1437,7 +1437,7 @@
 
             <qc-doc-exemple caption="Exemple de boutons radio de petite taille">
                 <form>
-                    <qc-radio-group legend="Choisissez une option" name="ex-sm" size="sm" required="false">
+                    <qc-radio-group legend="Choisissez une option" name="ex-sm" size="sm" required="false" has-error="true">
                         <qc-radio-button
                                 label="Option 1"
                                 value="1"
