Ajout d'exemple de validation de formulaire avec boutons radio

--- a/public/index.html
+++ b/public/index.html
@@ -1450,7 +1450,7 @@
             </qc-doc-exemple>
 
             <qc-doc-exemple caption="Exemple de boutons radio de taille moyenne pour un champ obligatoire">
-                <qc-radio-group legend="Choisissez une option : " name="ex-md" size="md" required invalid>
+                <qc-radio-group legend="Choisissez une option : " name="ex-md-ob" size="md" required>
                     <qc-radio-button
                             label="Option 1"
                             value="1"
@@ -1464,6 +1464,42 @@
                             value="3"
                     ></qc-radio-button>
                 </qc-radio-group>
+            </qc-doc-exemple>
+
+            <qc-doc-exemple caption="Exemple de validation de formulaire avec des boutons radio">
+                <form id="radio-form">
+                    <qc-radio-group legend="Choisissez une option : " name="ex-md-form" size="md" required>
+                        <qc-radio-button
+                                label="Option 1"
+                                value="1"
+                        ></qc-radio-button>
+                        <qc-radio-button
+                                label="Option 2"
+                                value="2"
+                        ></qc-radio-button>
+                        <qc-radio-button
+                                label="Option 3"
+                                value="3"
+                        ></qc-radio-button>
+                    </qc-radio-group>
+
+                    <qc-radio-group legend="Choisissez une option : " name="ex-md-form-2" size="md">
+                        <qc-radio-button
+                                label="Option 1"
+                                value="1"
+                        ></qc-radio-button>
+                        <qc-radio-button
+                                label="Option 2"
+                                value="2"
+                        ></qc-radio-button>
+                        <qc-radio-button
+                                label="Option 3"
+                                value="3"
+                        ></qc-radio-button>
+                    </qc-radio-group>
+
+                    <button type="submit">Soumettre</button>
+                </form>
             </qc-doc-exemple>
         </div>
     </main>
