--- a/public/index.html
+++ b/public/index.html
@@ -1518,6 +1518,132 @@
                     <button type="submit">Soumettre</button>
                 </form>
             </qc-doc-exemple>
+
+            <h3>Documentation technique</h3>
+
+            <h4>Attributs de qc-radio-group</h4>
+            <div class="table-overflow">
+                <table class="qc-table qc-striped">
+                    <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Valeur attendue</th>
+                        <th>Valeur par défaut</th>
+                        <th>Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>name</td>
+                        <td>Texte</td>
+                        <td></td>
+                        <td>Le nom identifiant le groupe de boutons radio dans le DOM</td>
+                    </tr>
+                    <tr>
+                        <td>legend</td>
+                        <td>Texte</td>
+                        <td></td>
+                        <td>Texte indiquant ce que le choix à sélectionner représente</td>
+                    </tr>
+                    <tr>
+                        <td>size</td>
+                        <td>"sm" ou "md"</td>
+                        <td>"md"</td>
+                        <td>Taille des boutons radio et de leurs étiquettes</td>
+                    </tr>
+                    <tr>
+                        <td>required</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>Indique si le champ est requis</td>
+                    </tr>
+                    <tr>
+                        <td>invalid</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>
+                            Indique si le champ est dans un état invalide
+                            (ajuster cette valeur au lors de la validation d'un formulaire)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>error-text</td>
+                        <td>Texte</td>
+                        <td>Champ obligatoire/Required field</td>
+                        <td>Texte qui s'affiche sous les boutons radio en cas d'état invalide</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <h4>Attributs de qc-radio-button</h4>
+            <div class="table-overflow">
+                <table class="qc-table qc-striped">
+                    <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Valeur attendue</th>
+                        <th>Valeur par défaut</th>
+                        <th>Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>name</td>
+                        <td>Texte</td>
+                        <td></td>
+                        <td>Le nom identifiant le groupe de boutons radio dans le DOM. Hérité du groupe parent si une valeur y est présente.</td>
+                    </tr>
+                    <tr>
+                        <td>value</td>
+                        <td>Texte</td>
+                        <td></td>
+                        <td>Valeur associée au bouton radio</td>
+                    </tr>
+                    <tr>
+                        <td>label</td>
+                        <td>Texte</td>
+                        <td></td>
+                        <td>Texte de l'étiquette s'affichant à côté du bouton radio</td>
+                    </tr>
+                    <tr>
+                        <td>size</td>
+                        <td>"sm" ou "md"</td>
+                        <td>"md"</td>
+                        <td>Taille des boutons radio et de leurs étiquettes. Hérité du groupe parent si une valeur y est présente.</td>
+                    </tr>
+                    <tr>
+                        <td>checked</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>
+                            Indique si le bouton est initialement sélectionné au chargement de la page.
+                            Si plusieurs boutons radio d'un même groupe ont l'attribut "checked" à "true",
+                            le dernier bouton à "true" sera sélectionné.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>disabled</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>Indique si un bouton radio peut être sélectionné</td>
+                    </tr>
+                    <tr>
+                        <td>required</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>Indique si un bouton radio peut être sélectionné</td>
+                    </tr>
+                    <tr>
+                        <td>invalid</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>Indique si un bouton radio est dans un état invalide. Hérité du groupe parent si une valeur y est présente.</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
     </main>
     <footer>
