Ajout de début de description des evenements JS associés aux boutons radio

--- a/public/index.html
+++ b/public/index.html
@@ -1660,7 +1660,16 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
+            </div>zzz
+
+            <h4>Événement JS</h4>
+            <p>
+                Un événement JS <code class="qc-bg-color-grey-pale">qc.radio.removeInvalidFor${name}</code>
+                est émis au clic du bouton radio d'un groupe.
+                Celui-ci est attrapé par le <code class="qc-bg-color-grey-pale">qc-radio-group</code> parent pour ajuster
+                l'attribut <code class="qc-bg-color-grey-pale">invalid</code> à <code class="qc-bg-color-grey-pale">false</code>
+                à celui-ci et tous les boutons radio enfants.
+            </p>
 
         </div>
     </main>
