Petits ajustements textuels dans la documentation

--- a/public/index.html
+++ b/public/index.html
@@ -1703,8 +1703,6 @@
 
             <p>Le composant de case à cocher permet de créer des éléments de formulaire pour la sélection multiple. Il peut être utilisé seul ou en groupe.</p>
 
-            <h3>Exemples</h3>
-
             <h4>Case à cocher seule</h4>
             <qc-doc-exemple caption="Exemple d'une case à cocher simple">
                 <qc-checkbox
@@ -1746,7 +1744,7 @@
                         <td>label</td>
                         <td>Texte</td>
                         <td>""</td>
-                        <td>Étiquette de la case à cocher</td>
+                        <td>Texte de l'étiquette s'affichant à droite de la case à cocher</td>
                     </tr>
                     <tr>
                         <td>value</td>
@@ -1756,13 +1754,13 @@
                     </tr>
                     <tr>
                         <td>disabled</td>
-                        <td>booléen</td>
+                        <td>"true" ou "false"</td>
                         <td>false</td>
                         <td>Désactive la case à cocher lorsque true</td>
                     </tr>
                     <tr>
                         <td>checked</td>
-                        <td>booléen</td>
+                        <td>"true" ou "false"</td>
                         <td>false</td>
                         <td>Détermine si la case est cochée par défaut</td>
                     </tr>
